# vaultd

./: .gitignore  README.md
obsidian-sync-plugin/: manifest.json  manifest.json.example  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-sync-plugin/src/: binary-sync.ts  conflict-modal.ts  crdt.ts  main.ts  offline-queue.ts  settings.ts  sync-client.ts  types.ts
obsidian-sync-server/: Cargo.toml  Dockerfile  config.toml  config.toml.example
obsidian-sync-server/data/: sync.db-shm  sync.db-wal
obsidian-sync-server/src/: auth.rs  blob_store.rs  git_backup.rs  main.rs  oplog.rs  relay.rs
