[package]
name = "obsidian-sync-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obsidian-sync-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
yrs = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cron = "0.13"
rustls = "0.22"
tokio-rustls = "0.25"
uuid = { version = "1.7", features = ["v4", "serde"] }
toml = "0.8"
parking_lot = "0.12"
thiserror = "1.0"
once_cell = "1.19"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
futures-util = "0.3"